set up mongodb variable and .rest methods and controller stubs
